[package]
name = "nanogeoip"
version = "0.1.0"
authors = ["Matthew Rothenberg <mroth@mroth.info>"]
edition = "2018"

[dependencies]
maxminddb = "0.12.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
hyper = "0.12"
clap = "2.32.0"
httpdate = "0.3.2"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "http_benchmarks"
harness = false
